--- a/index.html
+++ b/index.html
@@ -74,17 +74,13 @@
         <h3>Saya Vioneta</h3>
 
         
-        <p>Mahasiswa aktif di Universitas Pembangunan Nasional Veteran Jawa Timur, program studi Sistem 
-          Informasi. Saya memiliki minat yang kuat dalam bidang desain UI/UX, pengembangan Front-end dan Back-end. 
-          Saya telah mengembangkan keterampilan dan pengetahuan saya dalam desain antarmuka pengguna 
-          yang menarik dan fungsional, serta kemampuan dalam mengembangkan kode-kode Front-end dan Back-end yang 
-          responsif dan interaktif. Saya memiliki pengalaman dalam bekerja dalam tim, komunikasi yang 
-          efektif, serta kemampuan pemecahan masalah yang baik. Saya bersemangat untuk terus belajar dan 
-          berkembang dalam industri teknologi, dan siap untuk memberikan kontribusi yang berarti dalam 
-          proyek-proyek yang melibatkan desain dan pengembangan aplikasi.</p>
+        <p>Saya seorang mahasiswa Sistem Informasi di Universitas Pembangunan Nasional Veteran Jawa Timur yang antusias dan berkomitmen
+          menjadi Full-Stack Developer. Dengan latar belakang pendidikan dan ketertarikan dalam pemrograman, saya telah mengembangkan
+          keterampilan dalam pengembangan web, baik frontend maupun backend. Saya memiliki kemampuan bekerja secara efektif dalam tim,
+          didukung oleh komunikasi yang baik dan kemampuan analisis.</p>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1LYHmgPpskh89fRXWmcMr9H5_ySLRvvN0/view?usp=sharing" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/drive/folders/1DhJyedcTYi-yCR7soqyY6Xha8CtLTdrb?usp=sharing" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
@@ -154,23 +150,47 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
+          <h2>SQL for Data Analysis</h2>
+        </div>
+        <div class="desc">
+            <h3>MySkill</h3>
+            <p>Sep 2023</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container left">
+      <div class="content">
+        <div class="tag">
+          <h2>Artificial Intelligence 4 Jobs</h2>
+        </div>
+        <div class="desc">
+            <h3> PT. Orbit Ventura Indonesia </h3>
+            <p>Aug 2023 - Nov 2023</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>Sekolah Beta Intensif Hipster</h2>
+        </div>
+        <div class="desc">
+            <h3>Sekolah Beta</h3>
+            <p>Aug 2023 - Oct 2023</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container left">
+      <div class="content">
+        <div class="tag">
           <h2>AWS Cloud</h2>
         </div>
         <div class="desc">
-            <h3>Dicoding Indonesia</h3>
-            <p>Mei 2023 - Mei 2026</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>IT Support</h2>
-        </div>
-        <div class="desc">
-            <h3>Coursera</h3>
-            <p>Mei 2023</p>
+            <h3> Dicoding </h3>
+            <p>May 2023</p>
         </div>
       </div>
     </div>
@@ -178,11 +198,11 @@
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Adminitrasi Sistem dan Layanan Infrastruktur TI</h2>
+          <h2>Junior Web Programing</h2>
         </div>
         <div class="desc">
-            <h3>Coursera</h3>
-            <p>April 2023</p>
+            <h3>Plan Indonesia</h3>
+            <p>May 2023 - Oct 2023</p>
         </div>
       </div>
     </div>
@@ -190,28 +210,14 @@
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Keamanan TI</h2>
+          <h2>IT Support Google</h2>
         </div>
         <div class="desc">
-            <h3>Coursera</h3>
-            <p>April 2023</p>
+            <h3> INCO Academy Work In Tech</h3>
+            <p>Apr 2023</p>
         </div>
       </div>
     </div>
-
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>Sistem Operasi</h2>
-        </div>
-        <div class="desc">
-            <h3>Coursera</h3>
-            <p>April 2023</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 </section>
 <!-- experience section ends -->
