Update education details in index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h3>Saya Vioneta</h3>
 
         
-        <p>Saya seorang mahasiswa Sistem Informasi di Universitas Pembangunan Nasional Veteran Jawa Timur yang antusias dan berkomitmen
+        <p>Saya lulusan Sistem Informasi di Universitas Pembangunan Nasional Veteran Jawa Timur yang antusias dan berkomitmen
           menjadi Full-Stack Developer. Dengan latar belakang pendidikan dan ketertarikan dalam pemrograman, saya telah mengembangkan
           keterampilan dalam pengembangan web, baik frontend maupun backend. Saya memiliki kemampuan bekerja secara efektif dalam tim,
           didukung oleh komunikasi yang baik dan kemampuan analisis.</p>
@@ -120,7 +120,7 @@
         <div class="content">
         <h3>UPN "Veteran" Jawa Timur</h3>
         <p>SI - Sistem Informasi | Fakultas Ilmu Komputer</p>
-        <h4>2021 - Sekarang</h4>
+        <h4>2021 - 2025</h4>
         </div>
     </div>
 
